--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }
 
             .LeftBar {
-
+                width: 20%;
                 background-color: #121212;
                 text-align: left;
                 color: white;
@@ -44,15 +44,19 @@
     <body>
 
         <div class="HederBar">
-            <font size="72xp"; color="white" > Witam na mojej stronie </font>
+            <font size="72px"> Witam na mojej stronie </font>
         </div>
 
         <div class="LeftBar">
-            <font size="72xp"; color="white" > Github <br> Projekty <br> Wyjścia  </font>
+            <font size="48px"> <a href="https://github.com/Karski1Bi" > Github </a> <br> Projekty <br> Wyjścia  </font>
+        </div>
+
+        <div class="PlaceForImage">
+            <img src="" >
         </div>
 
         <div class="Messages">
-            <font size="72xp"; color="white" > Karski 1Bi </font>
+            <font size="72px"> Karski 1Bi </font>
         </div>
 
 
