--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             .Messages {
 
-                text-align: center;
+                text-align: left;
                 color: white;
 
             }
@@ -44,11 +44,11 @@
     <body>
 
         <div class="HederBar">
-            <font size="72px"> Witam na mojej stronie </font>
+            <font style="font-size:48px"> Technikum nr 8 im. Jana Karskiego </font>
         </div>
 
         <div class="LeftBar">
-            <font size="48px"> <a href="https://github.com/Karski1Bi" > Github </a> <br> Projekty <br> Wyjścia  </font>
+            <font style="font-size:32px"> <a href="https://github.com/Karski1Bi" > Github </a> <br> Projekty <br> Wyjścia  </font>
         </div>
 
         <div class="PlaceForImage">
@@ -56,7 +56,7 @@
         </div>
 
         <div class="Messages">
-            <font size="72px"> Karski 1Bi </font>
+            <font style="font-size:24px"> Strona klasy 1Bi w technikum nr 8 im Jana Karskiego </font> <br> <font style="font-size:16px"> Na tej stronie będą publikowanie projekty, wyjścia i sukcesy naszej klasy. </font>
         </div>
 
 
