Poprawiona wersja tekstu

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             position: absolute;
             border-radius: 20px;
             background-color: #191919;
-            top: 150px;
+            top: 140px;
             width: 200px;
-            height: 280px;
+            height: 800px;
             text-align: center;
             color: white;
 
@@ -63,6 +63,7 @@
 
             position: absolute;
             top: 470px;
+            left: 230px;
             text-align: left;
             color: white;
 
@@ -87,7 +88,7 @@
 </div>
 
 <div class="Messages">
-    <font style="font-size:24px"> Strona klasy 1Bi w technikum nr 8 im Jana Karskiego </font> <br> <font style="font-size:16px"> Na tej stronie będą publikowanie projekty, wyjścia i sukcesy naszej klasy. </font>
+    <font style="font-size:40px"> Strona klasy 1Bi w technikum nr 8 im Jana Karskiego </font> <br> <font style="font-size:28px"> Na tej stronie będą publikowanie projekty, wyjścia i sukcesy naszej klasy. </font>
 </div>
 
 
