--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 
         }
 
-        .link {
+        #link {
 
             font-size: 32px;
             color: white;
             text-decoration: none;
         }
 
-        .link:hover {
+        #link:hover {
+
             animation-name: linkanimation;
-            animation-duration: 1.3s;
+            animation-duration: 1s;
             animation-delay: 0s;
-            animation-timing-function: cubic-bezier(-1,-1,-1,-1);
-            animation-fill-mode: revert;
+
         }
 
         @keyframes linkanimation {
 
             0% { font-size: 32px; }
-            100% { font-size: 42px; }
+            100% { font-size: 38px; }
 
         }
 
@@ -80,7 +80,7 @@
 </div>
 
 <div class="LeftBar">
-    <font style="font-size:32px; color:#FFFFFF"> <br> <a class="link" href="https://github.com/Karski1Bi" > Github </a> <br><br> Projekty <br><br> Wyjścia  </font>
+    <font style="font-size:32px; color:#FFFFFF"> <br> <a id="link" href="https://github.com/Karski1Bi" > Github </a> <br><br> Projekty <br><br> Wyjścia  </font>
 </div>
 
 <div class="PlaceForImage">
